--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
     "url": "https://github.com/villers/t2stream/issues"
   },
   "homepage": "https://github.com/villers/t2stream#readme",
-    "dependencies": {
+  "dependencies": {
     "express": "^4.13.3"
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-nodemon": "^2.0.4",
-    "gulp-rimraf": "^0.2.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.9.2",
-    "gulp-watch": "^4.3.5",
-    "typescript": "^1.6.2"
+    "run-sequence": "^1.1.4"
   }
 }
