--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-flatten": "^0.2.0",
     "gulp-inject": "^3.0.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
