--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-debug": "^2.1.2",
     "gulp-flatten": "^0.2.0",
     "gulp-inject": "^3.0.0",
+    "gulp-ng-annotate": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
     "gulp-sourcemaps": "^1.6.0",
