--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
     "gulp-flatten": "^0.2.0",
+    "gulp-if": "^2.0.0",
     "gulp-inject": "^3.0.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
@@ -39,8 +40,10 @@
     "gulp-tslint-stylish": "^1.1.1",
     "gulp-typescript": "^2.9.2",
     "gulp-watch": "^4.3.5",
+    "i": "^0.3.3",
     "ripe": "^0.2.1",
     "run-sequence": "^1.1.4",
-    "tsd": "^0.6.5"
+    "tsd": "^0.6.5",
+    "yargs": "^3.29.0"
   }
 }
