--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
     ],
     "tasks": [
         {
-            "taskName": "typescript",
+            "taskName": "build",
             "isBuildCommand": true,
             "showOutput": "always"
         }
