--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/villers/t2stream#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "bootable": "^0.2.4",
+    "express": "^4.13.3",
+    "sequelize": "^3.13.0"
   },
   "devDependencies": {
     "bower": "^1.6.5",
@@ -44,6 +46,7 @@
     "main-bower-files": "^2.9.0",
     "ripe": "^0.2.1",
     "run-sequence": "^1.1.4",
+    "sequelize-cli": "^2.1.0",
     "tsd": "^0.6.5",
     "yargs": "^3.29.0"
   }
