--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "t2stream",
   "version": "0.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "tsd install && bower install"
   },
   "repository": {
     "type": "git",
