--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "angular-loading-bar": "~0.8.0",
+    "angular-ui-router": "~0.2.15"
   }
 }
