--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/villers/t2stream#readme",
   "dependencies": {
     "bootable": "^0.2.4",
+    "electrolyte": "^0.2.0",
     "express": "^4.13.3",
     "sequelize": "^3.13.0"
   },
