--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "bootable": "^0.2.4",
     "electrolyte": "^0.2.0",
     "express": "^4.13.3",
-    "sequelize": "^3.13.0"
+    "sequelize": "^3.13.0",
+    "sqlite3": "^3.1.1"
   },
   "devDependencies": {
     "bower": "^1.6.5",
