--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electrolyte": "^0.2.0",
     "express": "^4.13.3",
     "sequelize": "^3.13.0",
+    "sequelize-definer": "^0.4.6",
     "sqlite3": "^3.1.1"
   },
   "devDependencies": {
