--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,9 @@
   "dependencies": {
     "angular": "~1.4.7",
     "angular-loading-bar": "~0.8.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "angular-material": "~0.11.4",
+    "material-design-iconic-font": "~2.2.0",
+    "angular-messages": "~1.4.7"
   }
 }
