--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,15 @@
     "angular-ui-router": "~0.2.15",
     "angular-material": "~0.11.4",
     "material-design-iconic-font": "~2.2.0",
-    "angular-messages": "~1.4.7"
+    "angular-messages": "~1.4.7",
+    "angular-translate": "~2.8.1",
+    "angular-translate-loader-partial": "~2.8.1",
+    "angular-translate-storage-cookie": "~2.8.1",
+    "angular-translate-storage-local": "~2.8.1",
+    "animate.css": "~3.4.0",
+    "angular-local-storage": "~0.2.3",
+    "angular-sanitize": "~1.4.7",
+    "angular-touch": "~1.4.7",
+    "angular-moment": "~0.10.3"
   }
 }
