Add Model Creation DTS only remove import

--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "gulp-angular-templatecache": "^1.8.0",
     "gulp-concat": "^2.6.0",
     "gulp-debug": "^2.1.2",
+    "gulp-delete-lines": "0.0.7",
     "gulp-flatten": "^0.2.0",
     "gulp-if": "^2.0.0",
     "gulp-inject": "^3.0.0",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-plumber": "^1.0.1",
+    "gulp-remove-lines": "^0.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-stylus": "^2.1.0",
     "gulp-tslint": "^3.5.0",
@@ -53,6 +55,7 @@
     "gulp-typescript": "^2.9.2",
     "gulp-watch": "^4.3.5",
     "main-bower-files": "^2.9.0",
+    "merge2": "^0.3.6",
     "ripe": "^0.2.1",
     "run-sequence": "^1.1.4",
     "tsd": "^0.6.5",
