--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   },
   "homepage": "https://github.com/villers/t2stream#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.14.1",
-    "compression": "^1.6.0",
     "express": "^4.13.3",
-    "jison": "^0.4.15",
-    "method-override": "^2.3.5",
-    "morgan": "^1.6.1",
+    "jsonwebtoken": "^5.4.1",
+    "lru-cache": "^3.2.0",
+    "nconf": "^0.8.2",
+    "node-uuid": "^1.4.7",
     "sails-disk": "^0.10.8",
-    "sqlite3": "^3.1.1",
+    "sails-mongo": "^0.11.5",
+    "sails-mysql": "^0.11.2",
     "waterline": "^0.10.28"
   },
   "devDependencies": {
