--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "sails-disk": "^0.10.8",
     "sails-mongo": "^0.11.5",
     "sails-mysql": "^0.11.2",
-    "waterline": "^0.10.28"
+    "waterline": "^0.10.28",
+    "waterline-migrate": "0.0.5"
   },
   "devDependencies": {
     "bower": "^1.6.5",
